# plot2xlsx_svelte_fastapi

./: .gitignore  README.md  compose.yaml  directory_data.py  directory_select.py  main.py  models.py  sel_idx.py  xlsxout.py
backend/: Dockerfile
backend/app/: data.sqlite3  db.py  main.py  migrate_db.py  model_wavedata.py  plotly_figure.json  pyproject.toml  read_db.py  requirements.txt  router.py  ruff.toml  schema_pagedata.py  workdir.py
backend/app/data/ALL0002/: F0002CH1.CSV  F0002CH2.CSV  F0002TEK.SET
backend/app/data/ALL0004/: F0004CH1.CSV  F0004CH2.CSV  F0004TEK.SET
backend/app/data/ALL0006/: F0006CH1.CSV  F0006CH2.CSV
backend/app/data/ALL0007/: F0007CH1.CSV  F0007CH2.CSV  F0007TEK.SET
backend/app/data/ALL0008/: F0008CH1.CSV  F0008CH2.CSV  F0008TEK.SET
backend/app/data/ALL0009/: F0009CH1.CSV  F0009CH2.CSV  F0009TEK.SET
backend/app/data/ALL0010/: F0010CH1.CSV  F0010CH2.CSV  F0010TEK.SET
backend/app/data/ALL0011/: F0011CH1.CSV  F0011CH2.CSV  F0011TEK.SET
backend/app/data/ALL0012/: F0012CH1.CSV  F0012CH2.CSV  F0012TEK.SET
backend/app/data/ALL0013/: F0013CH1.CSV  F0013CH2.CSV  F0013TEK.SET
backend/app/data/ALL0014/: F0014CH1.CSV  F0014CH2.CSV  F0014TEK.SET
backend/app/data/ALL0015/: F0015CH1.CSV  F0015CH2.CSV  F0015TEK.SET
backend/app/data/ALL0016/: F0016CH1.CSV  F0016CH2.CSV  F0016TEK.SET
backend/app/data/ALL0017/: F0017CH1.CSV  F0017CH2.CSV  F0017TEK.SET
backend/app/src/: const_path.py  db.py  main.py  migrate_db.py  model_wavedata.py  read_db.py  router.py  schema_sheetdata.py  types_json_data.py
backend/app/xlsx/: xlsxout.py
(+91 files in other folders)
