[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
plotly = "^5.19.0"
kaleido = "0.2.1"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
xlsxwriter = "^3.2.0"
orjson = "^3.9.15"
brotli-asgi = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
